<resources>
    <string name="app_name">NFCLib</string>
    <string name="registerPageRedirect">Not a user? Click to Register</string>
    <string name="or">or</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="fullName">full name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loginPageRedirect">Already registered? Click to Login</string>
    <string name="title_activity_users_display">UsersDisplayActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admin_remove_book">AdminRemoveBookActivity</string>
    <string name="scanToGetNFC">Scan to get NFC</string>

</resources>
